[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Botroom.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BotUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=3]

[node name="Botroom" type="Node2D"]
script = ExtResource( 1 )

[node name="BotUI" parent="." instance=ExtResource( 2 )]

[node name="PositionPlayer1" type="Position2D" parent="."]
position = Vector2( 168, 243 )

[node name="PositionBot" type="Position2D" parent="."]
position = Vector2( 850, 241 )

[node name="Hand" type="Node" parent="."]
script = ExtResource( 3 )
diff_angle = 7.0
